@@ -1,4 +1,5 @@
 #!/bin/bash
+set +x
 
 if [ -n "$KAFKA_MIRRORMAKER_TRUSTED_CERTS_CONSUMER" ] || [ -n "$KAFKA_MIRRORMAKER_TRUSTED_CERTS_PRODUCER" ]; then
     # Generate temporary keystore password
@@ -37,8 +38,6 @@ echo ""
 
 # Disable Kafka's GC logging (which logs to a file)...
 export GC_LOG_ENABLED="false"
-# ... but enable equivalent GC logging to stdout
-export KAFKA_GC_LOG_OPTS="-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps"
 
 if [ -z "$KAFKA_LOG4J_OPTS" ]; then
 export KAFKA_LOG4J_OPTS="-Dlog4j.configuration=file:$KAFKA_HOME/custom-config/log4j.properties"
@@ -71,6 +70,9 @@ fi
 if [ -n "$KAFKA_MIRRORMAKER_NUMSTREAMS" ]; then
     numstreams="--num.streams ${KAFKA_MIRRORMAKER_NUMSTREAMS}"
 fi
+
+# exporting the GC options env var recognized by the Kafka scripts
+export KAFKA_GC_LOG_OPTS=$STRIMZI_KAFKA_GC_LOG_OPTS
 
 # starting Kafka Mirror Maker with final configuration
 exec $KAFKA_HOME/bin/kafka-mirror-maker.sh \
